Update NTNU theme

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/Makefile
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/Makefile
@@ -3,4 +3,4 @@ PDVARS += --highlight-style=pygments # the default theme
 
 .PHONY: help
 pdf-print:
-	asciidoctor-pdf -r asciidoctor-bibtex -a stem -a docinfodir="./configuration/print" -a pdf-theme="./themes/ntnu-theme.yml" index.adoc
+	asciidoctor-pdf -r asciidoctor-bibtex -a stem -a docinfodir="./configuration/print" -a pdf-theme="./themes/ntnu-theme.yml" -a pdf-fontsdir="./fonts" index.adoc
